# lmdeploy

./: CMakeLists.txt
benchmark/: profile_restful_api.py
lmdeploy/turbomind/deploy/target_model/: base.py
src/turbomind/kernels/: activation_kernels.cu  gpt_kernels.cu  reduce_kernel_utils.cuh  sampling_topk_kernels.cu  sampling_topk_kernels.h
src/turbomind/kernels/attention/: attention_params.h  attention_universal.h  kv_cache_utils_v2.cu  kv_cache_utils_v2.h  mainloop_sm70.h  mainloop_sm80.h
src/turbomind/layers/: DynamicDecodeLayer.cc
src/turbomind/models/llama/: CMakeLists.txt  LlamaBatch.cc  LlamaBatch.h  LlamaV2.cc  LlamaV2.h  LlamaWeight.cc  LlamaWeight.h  SequenceManager.h  llama_kernels.cu  llama_kernels.h  llama_params.h  unified_attention_layer.cc
src/turbomind/models/medusa_plugin/: CMakeLists.txt  medusa_choices.info  medusa_head.cc  medusa_head.h  medusa_util.cc  medusa_util.h  medusa_utils.cc  medusa_utils.h  medusa_weight.cc  medusa_weight.h  res_block.cc  res_block.h
src/turbomind/models/medusa_plugin/tests/: medusa_head_example.cc
src/turbomind/triton_backend/llama/: LlamaTritonModel.cc  LlamaTritonModel.h
src/turbomind/utils/: CMakeLists.txt
